--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-flask
-flask-cors
-flask-session
-gunicorn
-python-dotenv
-requests
-openai
-notion-client
-boto3
-PyMuPDF
-PyPDF2
+flask==2.3.3
+flask-cors==3.0.10
+flask-session==0.4.0
+requests==2.31.0
+openai==1.30.1
+python-dotenv==1.0.1
+notion-client==2.2.1
+boto3==1.34.83
+PyPDF2==3.0.1
